more sentiment stuff

--- a/hirsch/notebooks/Sentiment Analysis.ipynb
+++ b/hirsch/notebooks/Sentiment Analysis.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 337,
    "metadata": {
     "collapsed": false
    },
@@ -180,13 +180,13 @@
        "      dtype='<U4')"
       ]
      },
-     "execution_count": 335,
+     "execution_count": 337,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text_clf.predict([\"Who is Mahir?\"])"
+    "text_clf.predict([\"Who is Michael?\"])"
    ]
   },
   {
@@ -238,8 +238,17 @@
     "\n",
     "https://explosion.ai/\n",
     "\n",
-    "\n"
+    "http://blog.aylien.com/naive-bayes-for-dummies-a-simple-explanation/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
