--- a/hirsch/notebooks/Agenda.ipynb
+++ b/hirsch/notebooks/Agenda.ipynb
@@ -9,14 +9,6 @@
     "Thanks for choosing the Natural Language Processing project! This notebook will serve as your guide during your project. \n",
     "\n",
     "\n",
-    "## Contents\n",
-    "* Goals\n",
-    "* Agenda\n",
-    "* Introductory concepts in NLP\n",
-    "* Data processing for supplied corpora.\n",
-    "* Step by step guide to sentence classification (sentiment analysis).\n",
-    "* preliminary examples for topic modelling using LDA.\n",
-    "\n",
     "## Goals:\n",
     "* Learn how to create a problem statement and an execution plan.\n",
     "* Familiarize yourself with the basic concepts, challenges, opportunities, and methods of NLP.\n",
@@ -28,13 +20,13 @@
     "\n",
     "#### What is NLP?  (60 minutes):\n",
     "\n",
-    "* Deck (20 min) - technical / landscape\n",
-    "* Examples (20 min) - play around with example applications.\n",
-    "* Reflect - What role does text play in your work and how can NLP support this? (10 min)\n",
+    "* Deck (10 min) - technical / landscape\n",
+    "* Examples (10 min) - play around with example applications.\n",
+    "* Reflect - What role does text play in your work and how can NLP support this? (20 min)\n",
     "  * how do you use text in your work?\n",
     "  * how could this be relevant?\n",
     "  * how can this technological affordance be used for something innovative? \n",
-    "* Read through and discuss introductory material around NLP concepts. (10 min)\n",
+    "* Read through and discuss introductory material around NLP concepts. (20 min)\n",
     "* Clone the repo or download the repo as a zip, alternatively read docs online.\n",
     "  * If you do not have admin rights, find someone on your team who does or follow along with Michael.\n",
     "\n",
@@ -63,6 +55,15 @@
     "#### Wrap-up and presentation gathering (15 min)\n",
     "* Prepare for 17:15 regroup with the larger group.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
